# VTK_Pra

./: README.md
CPP/: CMakeLists.txt  MinimalQtVTKApp.cpp
OpenGL/: main  main.cpp
Practice/: CylinderExample.tar
Practice/CylinderExample/: CMakeLists.txt  mainWindow.cpp  mainWindow.ui
Practice/CylinderExample - 副本/: CMakeLists.txt  CMakeLists1.txt  CylinderExample.cxx  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
Practice/STLReader/: CMakeLists.txt  mainWindow.cpp
